<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/color"
        android:ems="10"
        android:hint="@string/hint_title"
        android:inputType="textPersonName"
        android:maxLength="50" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/title"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title"
        android:ems="10"
        android:hint="@string/hint_description"
        android:inputType="textPersonName"
        android:maxLength="50" />

    <yandex.com.mds.hw.colorpicker.colorview.EditableColorView
        android:id="@+id/color"
        android:layout_width="@dimen/edit_color_width"
        android:layout_height="@dimen/edit_color_height"
        android:layout_alignParentEnd="true"
        android:fitsSystemWindows="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/shadow_size"
        android:layout_alignEnd="@+id/color"
        android:layout_alignStart="@+id/color"
        android:layout_below="@+id/color"
        android:background="@drawable/shadow" />

    <yandex.com.mds.hw.noteedit.UrlImageView
        android:id="@+id/url_image"
        android:layout_width="@dimen/edit_color_width"
        android:layout_height="@dimen/edit_color_height"
        android:layout_alignStart="@+id/color"
        android:layout_below="@+id/color"
        android:layout_marginTop="@dimen/url_image_margin_top"
        android:contentDescription="@string/content_description_image_url" />

    <Button
        android:id="@+id/save_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/url_image"
        android:layout_alignParentStart="true"
        android:text="@string/save" />
</RelativeLayout>
