<resources>
    <string name="app_name">hw</string>
    <string name="title_notes">Notes</string>
    <string name="title_note_edit">Edit note</string>
    <string name="title_note_create">Create note</string>
    <string name="title_note_import_export">Import/Export notes</string>
    <string name="title_dialog_query_save">Query template title</string>
    <string name="title_dialog_url_image_edit">Edit image URL</string>

    <string name="content_description_image_url">Image URL</string>

    <string name="action_import_export">Import/Export notes</string>
    <string name="action_delete">Delete</string>
    <string name="action_filter">Filter</string>
    <string name="action_delete_sync_cache">Delete sync cache</string>

    <string name="hint_description">Description</string>
    <string name="hint_title">Title</string>

    <string name="pref_title_import_export_file">Import/Export file</string>
    <string name="pref_title_import">Import notes</string>
    <string name="pref_title_export">Export notes</string>
    <string name="pref_default_import_export_file">notes.json</string>

    <string name="query_filter_by_date">Filter by date</string>
    <string name="query_filter_by_color">Filter by color</string>
    <string name="query_sort">Sort</string>
    <string name="error_query_save">Could not save query template in</string>

    <string name="error_notes_import">Could not import notes</string>
    <string name="error_notes_export">Could not export notes</string>
    <string name="success_notes_import">Notes imported</string>
    <string name="success_notes_export">Notes exported</string>
    <string name="started_notes_import">Import started</string>
    <string name="started_notes_export">Export started</string>

    <string name="url_image_status_empty">No image</string>
    <string name="url_image_status_failed">Failed to load image</string>

    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="pick">Pick</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="synchronize">Synchronize</string>
    <string name="deleted">Deleted</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="manage_notes">Manage notes</string>

    <string name="connectivity_changed_message">Connectivity changed</string>
    <string name="sync_conflict_message">Conflict occurred while synchronizing notes</string>
    <string name="sync_conflict_action_resolve">Resolve</string>
    <string name="sync_format_illegal">Remote notes format is invalid</string>

    <string name="button_prefer_remote">Prefer remote</string>
    <string name="button_prefer_local">Prefer local</string>
    <string name="sync_started_message">Synchronization started</string>
    <string name="connectivity_absent_message">No connection</string>
    <string name="notes">Notes</string>
    <string name="conflict_resolve_error">Problem occurred while resolving conflict</string>
</resources>
