<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:orientation="horizontal">

    <yandex.com.mds.hw.colorpicker.colorview.CircleColorView
        android:id="@+id/color"
        android:layout_width="@dimen/circle_color_width"
        android:layout_height="@dimen/circle_color_height"
        android:layout_margin="@dimen/circle_color_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/list_item_margin_end"
        android:layout_marginStart="@dimen/list_item_margin_start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingTop="@dimen/title_top_padding"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingBottom="@dimen/description_bottom_padding"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/description_text_size" />

    </LinearLayout>
</FrameLayout>